[gd_scene load_steps=3 format=3 uid="uid://c32nbkg8pjact"]

[ext_resource type="Script" path="res://Scenes/score_ui.gd" id="1_247ip"]
[ext_resource type="FontFile" uid="uid://bf5use6b88osy" path="res://Sprites/UI/kenvector_future.ttf" id="1_pf46b"]

[node name="ScoreUI" type="CanvasLayer"]
script = ExtResource("1_247ip")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_top = 10

[node name="ScoreLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pf46b")
theme_override_font_sizes/font_size = 30
text = "123"
horizontal_alignment = 1

[node name="UpdateScoreTimer" type="Timer" parent="."]
autostart = true

[node name="WinTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="UpdateScoreTimer" to="." method="_on_update_score_timer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
